skeplib/tests/fixtures/parser/invalid/export_in_function.sk
fn main() -> Int {
  export { nope };
  return 0;
}
